# PODO_hubo2

./: hubo2_telepresence_data.txt
exe/: Core_Config.db  Daemon  PODOGUI  PODOLauncher  dataDaemon.txt  data_demo.txt  dataplot.m  hubo2_telepresence_data.txt  motion_1.txt  motion_2.txt  motion_3.txt  motion_4.txt  motion_5.txt  motion_6.txt  motion_7.txt  motion_8.txt  motion_9.txt
exe/configs/: LauncherConfig.ini.TT2956  LauncherConfig.ini.TT8289  LauncherConfig.ini.th2438
share/Headers/: JointInformation.h  RBSharedMemory.h  UserSharedMemory.h
share/WB_Data/: New_UB_ScienceMuseum_1.txt  New_UB_ScienceMuseum_10.txt  New_UB_ScienceMuseum_11.txt  New_UB_ScienceMuseum_12.txt  New_UB_ScienceMuseum_13.txt  New_UB_ScienceMuseum_15.txt  New_UB_ScienceMuseum_16.txt  New_UB_ScienceMuseum_17.txt  New_UB_ScienceMuseum_18.txt  New_UB_ScienceMuseum_19.txt  New_UB_ScienceMuseum_2.txt  New_UB_ScienceMuseum_22.txt  New_UB_ScienceMuseum_23.txt  New_UB_ScienceMuseum_24.txt  New_UB_ScienceMuseum_25.txt  New_UB_ScienceMuseum_26.txt  New_UB_ScienceMuseum_28.txt  New_UB_ScienceMuseum_3.txt  New_UB_ScienceMuseum_32.txt  New_UB_ScienceMuseum_33.txt  New_UB_ScienceMuseum_35.txt  New_UB_ScienceMuseum_36.txt  New_UB_ScienceMuseum_37.txt  New_UB_ScienceMuseum_38.txt  New_UB_ScienceMuseum_39.txt  New_UB_ScienceMuseum_4.txt  New_UB_ScienceMuseum_40.txt  New_UB_ScienceMuseum_41.txt  New_UB_ScienceMuseum_42.txt  New_UB_ScienceMuseum_42_lower.txt  New_UB_ScienceMuseum_42_short.txt  (+17 more)
src/ALPrograms/FreeWalking/: CMakeLists.txt  WalkingFSM.cpp  joint.cpp  joint.h  main.cpp  orient_fnc.cpp
(+147 files in other folders)
